# verityledger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_demo.py  tamper_detection.py
src/verityledger/: __init__.py  chain.py  core.py  exceptions.py
src/verityledger/cli/: __main__.py
src/verityledger/storage/: __init__.py  base.py  local.py
tests/: test_chain.py  test_cli.py  test_core.py  test_storage.py
