[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verityledger"
version = "0.1.0"
description = "Tamper-evident decision and tool-call logging for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VerityLedger" }]
keywords = ["ai", "agents", "audit", "logging", "llm", "observability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
verityledger = "verityledger.cli:main"

[project.urls]
Homepage = "https://github.com/verityledger/verityledger"
Issues = "https://github.com/verityledger/verityledger/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verityledger = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=verityledger --cov-report=term-missing"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
